--- a/app/index.html
+++ b/app/index.html
@@ -123,7 +123,7 @@ current: index
           <h4>Jessy</h4>
           <div class="recommend-text pt-2">
             <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-            <h5>2021/06/20</h5>
+            <date>2021/06/20</date>
           </div>
         </div>
       </li>
@@ -133,7 +133,7 @@ current: index
           <h4>凱倫</h4>
           <div class="recommend-text pt-2">
             <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
-            <h5>2021/04/18</h5>
+            <date>2021/04/18</date>
           </div>
         </div>
       </li>
@@ -143,7 +143,7 @@ current: index
           <h4>悠悠</h4>
           <div class="recommend-text pt-2">
             <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
-            <h5>2020/12/25</h5>
+            <date>2020/12/25</date>
           </div>
         </div>
       </li>
@@ -153,7 +153,7 @@ current: index
           <h4>Kyuan</h4>
           <div class="recommend-text pt-2">
             <p>服務很好，品質沒有任何問題，非常喜歡。</p>
-            <h5>2020/10/31</h5>
+            <date>2020/10/31</date>
           </div>
         </div>
       </li>
@@ -173,12 +173,11 @@ current: index
       <label for="email" class="contact-form-title">信箱</label>
       <input class="contact-input mb-lg-3 mb-md-2" type="text" name="email" id="email" placeholder="example@email.com">
       <label for="feedback" class="contact-form-title">意見反應</label>
-      <textarea class="contact-textarea mb-3 pb-lg-3 mb-md-2" name="feedback" id="feedback" cols="30" rows="5" placeholder="請輸入您的意見">
-      </textarea>
-      <div class="contact-policy d-flex align-items-md-start align-items-sm-start">
-        <input type="checkbox" name="agree" class="contact-agree ps-4" style="width:18px;height:18px;">
-        <label for="agree" class="ps-1">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
-      </div>
+      <textarea class="contact-textarea mb-3 pb-lg-3 mb-md-2" name="feedback" id="feedback" rows="5" placeholder="請輸入您的意見"></textarea>
+        <div class="contact-policy d-flex align-items-md-start align-items-sm-start">
+          <input type="checkbox" name="agree" id="agree" class="contact-agree ps-4" style="width:18px;height:18px;">
+          <label for="agree" class="ps-1">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
+        </div>
       <div class="contact-check-btn">
         <a href="#">確認送出</a>
       </div>
