--- a/app/blog.html
+++ b/app/blog.html
@@ -39,7 +39,7 @@ current: blog
 <!--區塊三-->
 <section class="blog-article-list">
   <div class="container">
-    <ul class="blog-article d-lg-flex d-md-flex d-block">
+    <ul class="blog-article d-lg-flex d-md-flex d-block" data-aos="fade-left">
       <li class="blog-article-img">
         <a href="blogDetail.html">
           <img src="./assets/images/blog-1.png" alt="blog-img">
@@ -77,7 +77,7 @@ current: blog
         </div>
       </li>
     </ul>
-    <ul class="blog-article d-lg-flex d-md-flex d-block">
+    <ul class="blog-article d-lg-flex d-md-flex d-block" data-aos="fade-left">
       <li class="blog-article-img">
         <a href="blogDetail.html">
           <img src="./assets/images/blog-2.png" alt="blog-img">
@@ -109,7 +109,7 @@ current: blog
         </div>
       </li>
     </ul>
-    <ul class="blog-article d-lg-flex d-md-flex d-block">
+    <ul class="blog-article d-lg-flex d-md-flex d-block" data-aos="fade-left">
       <li class="blog-article-img">
         <a href="blogDetail.html">
           <img src="./assets/images/blog-3.png" alt="blog-img">
@@ -141,7 +141,7 @@ current: blog
         </div>
       </li>
     </ul>
-    <ul class="blog-article d-lg-flex d-md-flex d-block">
+    <ul class="blog-article d-lg-flex d-md-flex d-block" data-aos="fade-left">
       <li class="blog-article-img">
         <a href="blogDetail.html">
           <img src="./assets/images/blog-4.png" alt="blog-img">
@@ -173,7 +173,7 @@ current: blog
         </div>
       </li>
     </ul>
-    <ul class="blog-article d-lg-flex d-md-flex d-block mb-0">
+    <ul class="blog-article d-lg-flex d-md-flex d-block mb-0" data-aos="fade-left">
       <li class="blog-article-img">
         <a href="blogDetail.html">
           <img src="./assets/images/blog-5.png" alt="blog-img">
