--- a/app/blogDetail.html
+++ b/app/blogDetail.html
@@ -57,7 +57,7 @@ current: blogDetail
           <h2>情人特別企劃</h2>
           <h3>2020 Valentine’s Special</h3>
         </li>
-        <li class="blog-article-card">
+        <li class="blog-article-card" data-aos="fade-up">
           <a href="blogDetail.html">
             <img src="./assets/images/blog-9.png" alt="blog-img">
           </a>
@@ -66,7 +66,7 @@ current: blogDetail
             屬於你們的甜蜜默契！
           </p>
         </li>
-        <li class="blog-article-card">
+        <li class="blog-article-card" data-aos="fade-up">
           <a href="blogDetail.html">
             <img src="./assets/images/blog-6.png" alt="blog-img">
           </a>
@@ -75,7 +75,7 @@ current: blogDetail
             屬於你們的甜蜜默契！
           </p>
         </li>
-        <li class="blog-article-card">
+        <li class="blog-article-card" data-aos="fade-up">
           <a href="blogDetail.html">
             <img src="./assets/images/blog-7.png" alt="blog-img">
           </a>
@@ -84,7 +84,7 @@ current: blogDetail
             屬於你們的甜蜜默契！
           </p>
         </li>
-        <li class="blog-article-card">
+        <li class="blog-article-card" data-aos="fade-up">
           <a href="blogDetail.html">
             <img src="./assets/images/blog-10.jpg" alt="blog-img">
           </a>
