--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@ current: index
 <!--區塊一-->
 <section class="indexBanner d-flex justify-content-center align-items-center justify-content-sm-end img-fluid">
   <div class="container">
-    <div class="indexBanner-title">
+    <div class="indexBanner-title" data-aos="fade-left">
       <h3>Promise-Desert 2020 早春系列</h3>
       <h2>看得清，才能看得遠</h2>
       <a href="optical.html" class="indexBanner-buyBtn">立即購買</a>
@@ -16,7 +16,7 @@ current: index
 </section>
 <!--區塊二-->
 <section class="function">
-  <div class="container">
+  <div class="container" data-aos="flip-up">
     <h3 class="subtitle">用專業的心，做專業的事</h3>
     <ul class="function-list d-flex row g-0">
       <li class="function-item">
@@ -60,7 +60,7 @@ current: index
 </section>
 <!--區塊三-->
 <section class="classic">
-  <div class="container">
+  <div class="container" data-aos="zoom-in">
     <h3 class="classic-title subtitle">經典系列鏡框</h3>
     <ul class="classic-list d-flex">
       <li class="classic-item d-flex flex-column">
@@ -114,7 +114,7 @@ current: index
 </section>
 <!--區塊五-->
 <section class="recommend">
-  <div class="container">
+  <div class="container" data-aos="fade-right">
     <h3>顧客推薦</h3>
     <ul class="recommend-list row">
       <li class="recommend-item col-lg-3 col-md-6">
