--- a/app/sunglasses.html
+++ b/app/sunglasses.html
@@ -39,7 +39,7 @@ current: sunglassess
     <h3>2020 NEW COLLECTION</h3>
     <h4>賽璐珞鈦金屬混合鏡框</h4>
     <ul class="sunglasses-group row">
-      <li class="col-lg-4 col-md-6 col-12 sunglasses-product-item">
+      <li class="col-lg-4 col-md-6 col-12 sunglasses-product-item" data-aos="fade-left">
         <img src="./assets/images/products-4.png" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -50,7 +50,7 @@ current: sunglassess
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-4 col-md-6 col-12 sunglasses-product-item">
+      <li class="col-lg-4 col-md-6 col-12 sunglasses-product-item" data-aos="fade-left">
         <img src="./assets/images/products-3.png" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -61,7 +61,7 @@ current: sunglassess
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-4 col-md-6 col-12 sunglasses-product-item">
+      <li class="col-lg-4 col-md-6 col-12 sunglasses-product-item" data-aos="fade-left">
         <img src="./assets/images/products-2.png" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -72,7 +72,7 @@ current: sunglassess
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-4 col-md-6 col-12 sunglasses-product-item">
+      <li class="col-lg-4 col-md-6 col-12 sunglasses-product-item" data-aos="fade-left">
         <img src="./assets/images/products-6.jpg" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -83,7 +83,7 @@ current: sunglassess
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-4 col-md-6 col-12 sunglasses-product-item mb-0">
+      <li class="col-lg-4 col-md-6 col-12 sunglasses-product-item mb-0" data-aos="fade-left">
         <img src="./assets/images/products-11.jpg" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -94,7 +94,7 @@ current: sunglassess
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-4 col-md-6 col-12 sunglasses-product-item d-none d-md-block d-lg-block mb-0">
+      <li class="col-lg-4 col-md-6 col-12 sunglasses-product-item d-none d-md-block d-lg-block mb-0" data-aos="fade-left">
         <img src="./assets/images/products-5.jpg" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
