--- a/app/optical.html
+++ b/app/optical.html
@@ -39,7 +39,7 @@ current: optical
     <h3>Celluloid Combi</h3>
     <h4>賽璐珞鈦金屬混合鏡框</h4>
     <ul class="row">
-      <li class="col-lg-3 col-md-6 col-12 optical-product-item">
+      <li class="col-lg-3 col-md-6 col-12 optical-product-item" data-aos="fade-right" >
         <img src="./assets/images/products-1.png" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -50,7 +50,7 @@ current: optical
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-3 col-md-6 col-12 optical-product-item">
+      <li class="col-lg-3 col-md-6 col-12 optical-product-item" data-aos="fade-right" >
         <img src="./assets/images/products-2.png" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -61,7 +61,7 @@ current: optical
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-3 col-md-6 col-12 optical-product-item ">
+      <li class="col-lg-3 col-md-6 col-12 optical-product-item" data-aos="fade-right">
         <img src="./assets/images/products-3.png" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -72,7 +72,7 @@ current: optical
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-3 col-md-6 col-12 optical-product-item">
+      <li class="col-lg-3 col-md-6 col-12 optical-product-item" data-aos="fade-right" >
         <img src="./assets/images/products-4.png" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -83,7 +83,7 @@ current: optical
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-3 col-md-6 col-12 optical-product-item mb-0">
+      <li class="col-lg-3 col-md-6 col-12 optical-product-item  mb-0" data-aos="fade-right">
         <img src="./assets/images/products-5.jpg" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -94,7 +94,7 @@ current: optical
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-3 col-md-6 col-12 optical-product-item d-none d-md-block d-lg-block">
+      <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block" data-aos="fade-right">
         <img src="./assets/images/products-6.jpg" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -105,7 +105,7 @@ current: optical
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-3 col-md-6 col-12 optical-product-item d-none d-md-block d-lg-block">
+      <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block" data-aos="fade-right">
         <img src="./assets/images/products-7.jpg" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -116,7 +116,7 @@ current: optical
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-3 col-md-6 col-12 optical-product-item d-none d-md-block d-lg-block">
+      <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block" data-aos="fade-right">
         <img src="./assets/images/products-8.jpg" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -127,7 +127,7 @@ current: optical
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-3 col-md-6 col-12 optical-product-item d-none d-md-block d-lg-block mb-lg-0">
+      <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block mb-lg-0" data-aos="fade-right">
         <img src="./assets/images/products-9.jpg" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -138,7 +138,7 @@ current: optical
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-3 col-md-6 col-12 optical-product-item d-none d-md-block d-lg-block mb-lg-0">
+      <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block mb-lg-0" data-aos="fade-right">
         <img src="./assets/images/products-10.jpg" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -149,7 +149,7 @@ current: optical
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-3 col-md-6 col-12 optical-product-item d-none d-md-block d-lg-block mb-lg-0 mb-md-0">
+      <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block mb-lg-0 mb-md-0" data-aos="fade-right">
         <img src="./assets/images/products-11.jpg" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
@@ -160,7 +160,7 @@ current: optical
           <div class="optical-color-two"></div>
         </div>
       </li>
-      <li class="col-lg-3 col-md-6 col-12 optical-product-item d-none d-md-block d-lg-block mb-lg-0 mb-md-0">
+      <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block mb-lg-0 mb-md-0" data-aos="fade-right">
         <img src="./assets/images/products-12.jpg" alt="product">
         <div class="optical product-text d-flex justify-content-between">
           <h5>BJ41600S</h5>
