--- a/app/store.html
+++ b/app/store.html
@@ -27,7 +27,7 @@ current: store
 </section>
 <!--區塊三-->
 <section class="store-locate">
-  <div class="container">
+  <div class="container" data-aos="fade-up">
     <ul class="store-list row g-0">
       <li class="store-item col-lg-4 col-md-6">
         <img src="./assets/images/locate2.jpg" alt="store">
