--- a/app/locate.html
+++ b/app/locate.html
@@ -28,9 +28,11 @@ current: locate
 <!--區塊三-->
 <section class="locate-list">
   <div class="container">
-    <ul class="locate-box px-0 d-lg-flex d-md-block d-block justify-content-between">
-      <li class="locate-item mb-0 d-lg-block d-md-flex" data-aos="fade-right">
-        <img src="./assets/images/locate1.jpeg" alt="locate">
+    <ul class="locate-box row">
+      <li class="locate-item col-5 g-0" data-aos="fade-right">
+        <div class="locate-item-img">
+          <img src="./assets/images/locate1.jpeg" alt="locate">
+        </div>
         <ul class="locate-item-body">
           <li class="locate-item-title">
             <h3>台北中山旗艦店</h3>
@@ -49,7 +51,7 @@ current: locate
           </li>
         </ul>
       </li>
-      <li class="locate-map" data-aos="fade-left">
+      <li class="locate-map col-7 g-0" data-aos="fade-left">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3614.459956901799!2d121.5220455!3d25.052395!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a968b78933bb%3A0xaeda148545ce64e3!2zMTA0OTHlj7DljJfluILkuK3lsbHljYDljZfkuqzmnbHot6_kuIDmrrUyNeiZnw!5e0!3m2!1szh-TW!2stw!4v1656605069685!5m2!1szh-TW!2stw" 
         style="border:0;" allowfullscreen="" 
         loading="lazy" referrerpolicy="no-referrer-when-downgrade">
