--- a/app/optical.html
+++ b/app/optical.html
@@ -6,19 +6,19 @@ current: optical
 ---
 <!--區塊一-->
 <section class="optical-menu">
-  <div class="container">
-    <ul class="optical-menu-list d-flex">
-      <li class="optical-menu-item d-flex justify-content-center align-items-center active pb-2">
-        <a href="#">
+  <div class="container px-0">
+    <ul class="optical-menu-list row g-0">
+      <li class="optical-menu-item d-flex justify-content-center align-items-center active col-4">
+        <a href="optical.html">
           <h2 class="ps-md-2">OPTICAL</h2>
         </a>
       </li>
-      <li class="optical-menu-item d-flex justify-content-center align-items-center">
+      <li class="optical-menu-item d-flex justify-content-center align-items-center col-4">
         <a href="sunglasses.html">
           <h2 class="ps-md-2">SUNGLASSES</h2>
         </a>
       </li>
-      <li class="optical-menu-item d-flex justify-content-center align-items-center">
+      <li class="optical-menu-item d-flex justify-content-center align-items-center col-4">
         <a href="#">
           <h2 class="ps-md-2">FUNCTIONAL</h2>
         </a>
@@ -46,8 +46,8 @@ current: optical
           <p>NTD3,490</p>
         </div>
         <div class="optical-color d-flex">
-          <div class="optical-color-one me-2"></div>
-          <div class="optical-color-two"></div>
+          <a href="#"><div class="optical-color-one me-2"></div></a>
+          <a href="#"><div class="optical-color-two"></div></a>
         </div>
       </li>
       <li class="col-lg-3 col-md-6 col-12 optical-product-item" data-aos="fade-right" >
@@ -57,8 +57,8 @@ current: optical
           <p>NTD3,490</p>
         </div>
         <div class="optical-color d-flex">
-          <div class="optical-color-one me-2"></div>
-          <div class="optical-color-two"></div>
+          <a href="#"><div class="optical-color-one me-2"></div></a>
+          <a href="#"><div class="optical-color-two"></div></a>
         </div>
       </li>
       <li class="col-lg-3 col-md-6 col-12 optical-product-item" data-aos="fade-right">
@@ -68,8 +68,8 @@ current: optical
           <p>NTD3,490</p>
         </div>
         <div class="optical-color d-flex">
-          <div class="optical-color-one me-2"></div>
-          <div class="optical-color-two"></div>
+          <a href="#"><div class="optical-color-one me-2"></div></a>
+          <a href="#"><div class="optical-color-two"></div></a>
         </div>
       </li>
       <li class="col-lg-3 col-md-6 col-12 optical-product-item" data-aos="fade-right" >
@@ -79,8 +79,8 @@ current: optical
           <p>NTD3,490</p>
         </div>
         <div class="optical-color d-flex">
-          <div class="optical-color-one me-2"></div>
-          <div class="optical-color-two"></div>
+          <a href="#"><div class="optical-color-one me-2"></div></a>
+          <a href="#"><div class="optical-color-two"></div></a>
         </div>
       </li>
       <li class="col-lg-3 col-md-6 col-12 optical-product-item  mb-0" data-aos="fade-right">
@@ -90,8 +90,8 @@ current: optical
           <p>NTD3,490</p>
         </div>
         <div class="optical-color d-flex">
-          <div class="optical-color-one me-2"></div>
-          <div class="optical-color-two"></div>
+          <a href="#"><div class="optical-color-one me-2"></div></a>
+          <a href="#"><div class="optical-color-two"></div></a>
         </div>
       </li>
       <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block" data-aos="fade-right">
@@ -101,8 +101,8 @@ current: optical
           <p>NTD3,490</p>
         </div>
         <div class="optical-color d-flex">
-          <div class="optical-color-one me-2"></div>
-          <div class="optical-color-two"></div>
+          <a href="#"><div class="optical-color-one me-2"></div></a>
+          <a href="#"><div class="optical-color-two"></div></a>
         </div>
       </li>
       <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block" data-aos="fade-right">
@@ -112,8 +112,8 @@ current: optical
           <p>NTD3,490</p>
         </div>
         <div class="optical-color d-flex">
-          <div class="optical-color-one me-2"></div>
-          <div class="optical-color-two"></div>
+          <a href="#"><div class="optical-color-one me-2"></div></a>
+          <a href="#"><div class="optical-color-two"></div></a>
         </div>
       </li>
       <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block" data-aos="fade-right">
@@ -123,8 +123,8 @@ current: optical
           <p>NTD3,490</p>
         </div>
         <div class="optical-color d-flex">
-          <div class="optical-color-one me-2"></div>
-          <div class="optical-color-two"></div>
+          <a href="#"><div class="optical-color-one me-2"></div></a>
+          <a href="#"><div class="optical-color-two"></div></a>
         </div>
       </li>
       <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block mb-lg-0" data-aos="fade-right">
@@ -134,8 +134,8 @@ current: optical
           <p>NTD3,490</p>
         </div>
         <div class="optical-color d-flex">
-          <div class="optical-color-one me-2"></div>
-          <div class="optical-color-two"></div>
+          <a href="#"><div class="optical-color-one me-2"></div></a>
+          <a href="#"><div class="optical-color-two"></div></a>
         </div>
       </li>
       <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block mb-lg-0" data-aos="fade-right">
@@ -145,8 +145,8 @@ current: optical
           <p>NTD3,490</p>
         </div>
         <div class="optical-color d-flex">
-          <div class="optical-color-one me-2"></div>
-          <div class="optical-color-two"></div>
+          <a href="#"><div class="optical-color-one me-2"></div></a>
+          <a href="#"><div class="optical-color-two"></div></a>
         </div>
       </li>
       <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block mb-lg-0 mb-md-0" data-aos="fade-right">
@@ -156,8 +156,8 @@ current: optical
           <p>NTD3,490</p>
         </div>
         <div class="optical-color d-flex">
-          <div class="optical-color-one me-2"></div>
-          <div class="optical-color-two"></div>
+          <a href="#"><div class="optical-color-one me-2"></div></a>
+          <a href="#"><div class="optical-color-two"></div></a>
         </div>
       </li>
       <li class="col-lg-3 col-md-6 col-12 optical-product-item  d-none d-md-block d-lg-block mb-lg-0 mb-md-0" data-aos="fade-right">
@@ -167,8 +167,8 @@ current: optical
           <p>NTD3,490</p>
         </div>
         <div class="optical-color d-flex">
-          <div class="optical-color-one me-2"></div>
-          <div class="optical-color-two"></div>
+          <a href="#"><div class="optical-color-one me-2"></div></a>
+          <a href="#"><div class="optical-color-two"></div></a>
         </div>
       </li>
     </ul>
