--- a/app/sunglasses.html
+++ b/app/sunglasses.html
@@ -6,19 +6,19 @@ current: sunglassess
 ---
 <!--區塊一-->
 <section class="optical-menu">
-  <div class="container">
-    <ul class="optical-menu-list d-flex">
-      <li class="optical-menu-item d-flex justify-content-center align-items-center">
+  <div class="container px-0">
+    <ul class="optical-menu-list row g-0">
+      <li class="optical-menu-item d-flex justify-content-center align-items-center col-4">
         <a href="optical.html">
           <h2 class="ps-md-2">OPTICAL</h2>
         </a>
       </li>
-      <li class="optical-menu-item d-flex justify-content-center align-items-center active pb-2">
+      <li class="optical-menu-item d-flex justify-content-center align-items-center col-4 active">
         <a href="sunglasses.html">
           <h2 class="ps-md-2">SUNGLASSES</h2>
         </a>
       </li>
-      <li class="optical-menu-item d-flex justify-content-center align-items-center">
+      <li class="optical-menu-item d-flex justify-content-center align-items-center col-4">
         <a href="#">
           <h2 class="ps-md-2">FUNCTIONAL</h2>
         </a>
